Change font icons to svgs

--- a/app/assets/stylesheets/my_list.css.scss
+++ b/app/assets/stylesheets/my_list.css.scss
@@ -15,10 +15,7 @@ nav#my-list {
       width: 1em;
       height: 1em;
       cursor: pointer;
-      color: $background-dark;
-      &:hover {
-        color: $danger-color;
-      }
+      background-size: 10px;
     }
   }
   .how-to {
