--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -73,13 +73,12 @@ ul.results {
     font-family: $sans-serif;
     font-size: emize(14);
     display: inline;
-    margin: 0 1em 0 0;
+    margin: 0 1.2em 0 0;
     a {
+      display: inline-block;
       color: #000;
-      span:before {
-        color: $background-darker;
-        margin-right: .2em;
-      }
+      background-position: 0 50%;
+      padding-left: 1.4em;
     }
     &.active a {
       cursor: default;
