--- a/app/assets/stylesheets/show.css.scss
+++ b/app/assets/stylesheets/show.css.scss
@@ -53,9 +53,11 @@
     clear: right;
     margin: 1em 0 2em;
     white-space: nowrap;
-    span {
-      margin-right: .2em;
-    }
+    color: #000;
+    background-position: 0 50%;
+    padding-left: 1.4em;
+    font-family: $sans-serif;
+    font-size: emize(14);
   }
 
   .compare-check {
