--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,12 +8,12 @@
       %meta{ name: 'robots', content: 'noindex, nofollow' }
     /[if IE]
       %meta{ "http-equiv" => "X-UA-Compatible", "content" => "IE=edge"}
-    /[if lte IE 8]
-      = javascript_include_tag "#{APP_CONFIG['assets_url_base']}html5shiv-printshiv.js"
     = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}malmo.css", media: 'all'
     = stylesheet_link_tag "application", media: 'all'
-    /[if lte IE 7]
-      = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}legacy/ie7.css", media: 'all'
+    /[if lte IE 8]
+      = javascript_include_tag "#{APP_CONFIG['assets_url_base']}html5shiv-printshiv.js"
+      = stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}legacy/ie8.css", media: 'all'
+    %noscript= stylesheet_link_tag "#{APP_CONFIG['assets_url_base']}icons.fallback.css", media: 'all'
     %link{ rel: 'icon', type: 'image/x-icon', href: "#{APP_CONFIG['assets_url_base']}favicon.ico" }
     = csrf_meta_tag
   %body{ class: "#{@body_classes} mf-v4 nursing-homes" }
